ecom-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ecom-app
  namespace: ecom-app
spec:
  replicas: 4
  revisionHistoryLimit: 5
  strategy:
    blueGreen:
      activeService: ecom-active
      previewService: ecom-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 30
      prePromotionAnalysis:
        templates:
        - templateName: ecom-success-rate
  selector:
    matchLabels:
      app: ecom-app
  template:
    metadata:
      labels:
        app: ecom-app
    spec:
      containers:
      - name: ecom-app
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
