sample-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecom-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: ecom-app
spec:
  replicas: 4
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: echo-web
  template:
    metadata:
      labels:
        app: echo-web
    spec:
      containers:
      - name: echo-app
        image: gcr.io/google-containers/echoserver:1.4
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata: 
  name: echo-service
  namespace: ecom-app
spec:
  type: NodePort
  selector:
    app: echo-web
  ports:
  - port: 80
    targetPort: 8080   # Maps Service port 80 down to Pod container port 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: ecom-app
  annotations:
   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/healthcheck-path: /
   # The ALB will still knock on Port 80 at the Service layer, which works perfectly
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
   #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:902762039016:certificate/640df1a0-ff39-46fe-ab04-323db793d9f8
   alb.ingress.kubernetes.io/ssl-redirect: '443'
   alb.ingress.kubernetes.io/healthcheck-port: '8080'
   alb.ingress.kubernetes.io/certificate-domain-names: trtesthzforfailover.link
   external-dns.alpha.kubernetes.io/hostname: trtesthzforfailover.link
spec:
  ingressClassName: alb
  rules:
  - host: trtesthzforfailover.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 80
